[package]
name = "coreemu"
version = "0.1.5"
authors = ["Lars Baumgaertner <1264131+gh0st42@users.noreply.github.com>"]
description = "Rust client library for gRPC interface of coreemu https://github.com/coreemu/core"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gh0st42/coreemu-rs"
categories = [ "network-programming" ] 

[[bin]]
name = "core-pos"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7.2", default-features = false, features = ["channel", "codegen", "prost", "transport"] }
prost = "0.10.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.15"

[build-dependencies]
tonic-build = "0.7"
